fix top right button too close issue

--- a/projects/storefrontstyles/scss/components/content/navigation/_navigation-ui.scss
+++ b/projects/storefrontstyles/scss/components/content/navigation/_navigation-ui.scss
@@ -137,7 +137,7 @@
           padding-top: 20px;
           padding-inline-end: 15px;
           padding-bottom: 25px;
-          padding-inline-start: 0;
+          padding-inline-start: 15px;
         }
         // first level headings will be bold in desktop
         nav > h5 {
@@ -161,7 +161,7 @@
     padding-top: 20px;
     padding-inline-end: 15px;
     padding-bottom: 22px;
-    padding-inline-start: 0;
+    padding-inline-start: 15px;
   }
   nav > div > cx-generic-link {
     padding: 10px 0;
